--- a/server/package.json
+++ b/server/package.json
@@ -17,11 +17,13 @@
     "helmet": "^8.0.0",
     "mongoose": "^8.7.1",
     "nodemon": "^3.1.7",
-    "socket.io": "^4.8.0"
+    "socket.io": "^4.8.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
