--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^8.7.1",
     "nodemon": "^3.1.7",
     "socket.io": "^4.8.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
