--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-async-errors": "^3.1.1",
     "glob": "^11.0.0",
     "helmet": "^8.0.0",
     "mongoose": "^8.7.1",
+    "multer": "1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "socket.io": "^4.8.0",
     "swagger-jsdoc": "^6.2.8",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
     "@types/uuid": "^10.0.0",
