--- a/client/package.json
+++ b/client/package.json
@@ -13,17 +13,22 @@
     "@ant-design/icons": "^5.5.1",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
+    "@hookform/resolvers": "^3.9.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/emoji-mart": "^3.0.14",
     "antd": "^5.21.4",
     "axios": "^1.7.7",
     "emoji-mart": "^5.6.0",
+    "firebase": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.1",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.8.0"
+    "socket.io-client": "^4.8.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
