--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
+    "firebase-admin": "^13.0.1",
     "glob": "^11.0.0",
     "helmet": "^8.0.0",
     "mongoose": "^8.7.1",
